--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "apollo-server": "^3.3.0",
     "dotenv": "^10.0.0",
+    "google-auth-library": "^7.10.0",
     "graphql": "^15.6.0",
     "mongoose": "^6.0.9"
   }
