--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "fletcher.ramee@stonybrook.edu",
   "license": "MIT",
   "dependencies": {
+    "apollo-datasource-mongodb": "^0.5.2",
     "apollo-server": "^3.3.0",
     "dotenv": "^10.0.0",
     "google-auth-library": "^7.10.0",
