--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,8 +8,6 @@ phases:
 
    - echo Installing source NPM dependencies...
 
-   - npm install
-
  build:
 
   commands:
@@ -20,7 +18,7 @@ phases:
 
    - echo Running unit tests
 
-  #  - npm test
+   - yarn test
 
  post_build:
 
