--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "fletcher.ramee@stonybrook.edu",
   "license": "MIT",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.42.0",
     "apollo-datasource-mongodb": "^0.5.2",
     "apollo-server": "^3.3.0",
     "dotenv": "^10.0.0",
